feat: add dev.sync.onUpload.exec.once
